fix(filter): proper line-height on small devices

--- a/assets/css/nerddisco.css
+++ b/assets/css/nerddisco.css
@@ -26,7 +26,7 @@
   --subtitle-size: 7.5rem;
   --subtitle-margin: calc(var(--space-around) * 4) 0 calc(var(--space-around) * 2) 0;
   --subtitle-with-submenu-margin: calc(var(--space-around) * 4) 0 0 0;
-  --subtitle-submenu-margin: calc(var(--space-around) * .5) 0 calc(var(--space-around) * 2) 0;
+  --subtitle-submenu-margin: 0 0 calc(var(--space-around) * 1.5) 0;
 
   --attention-size: 2.5rem;
 
@@ -360,6 +360,7 @@ ul.filter li {
 
 ul.filter li a {
   padding: .5em;
+  line-height: 3em;
 }
 
 ul.list li:nth-child(n+2) {
